# augmentai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agents.md  pyproject.toml  requirements.txt
augmentai/: __init__.py  exceptions.py
augmentai/ablation/: __init__.py  ablation.py
augmentai/cli/: __init__.py  ablate.py  app.py  chat.py  curriculum.py  diff.py  prepare.py  repair.py  search.py  serve.py  shift.py
augmentai/compilers/: __init__.py  albumentations.py  base.py
augmentai/core/: __init__.py  config.py  manifest.py  pipeline.py  policy.py  schema.py
augmentai/curriculum/: __init__.py  adaptive_augmentation.py  curriculum_scheduler.py  difficulty_scorer.py
augmentai/domains/: __init__.py  base.py  medical.py  natural.py  ocr.py  satellite.py
augmentai/export/: __init__.py  folders.py  scripts.py
augmentai/inspection/: __init__.py  analyzer.py  detector.py
augmentai/linting/: __init__.py  linter.py
augmentai/llm/: __init__.py  client.py  parser.py  prompts.py
augmentai/metrics/: __init__.py  robustness.py
augmentai/preview/: __init__.py  preview.py
augmentai/repair/: __init__.py  repair_report.py  repair_suggestions.py  sample_analysis.py
augmentai/rules/: __init__.py  enforcement.py  safety_tester.py  validator.py
augmentai/search/: __init__.py  evaluator.py  optimizer.py  result.py  sampler.py
augmentai/shift/: __init__.py  shift_evaluator.py  shift_generator.py
augmentai/splitting/: __init__.py  strategies.py
augmentai/utils/: __init__.py  progress.py
augmentai/versioning/: __init__.py  versioning.py
docs/: index.md  quickstart.md
docs/domains/: ocr.md  (+3 more)
notebooks/: AugmentAI_Introduction.ipynb
tests/: conftest.py  test_ablation.py  test_cli_integration.py  test_compiler.py  test_curriculum.py  test_domains.py  test_linter.py  test_parser.py  test_prepare.py  test_preview.py  test_repair.py  test_robustness.py  test_safety_tester.py  test_search.py  test_shift.py  test_versioning.py
(+32 files in other folders)
